Added a color picker that dynamically changes the color of messages.

--- a/pages/styles/home.css
+++ b/pages/styles/home.css
@@ -16,20 +16,29 @@
       width: 100%;
   }
 
-  form input {
-      border: 0;
-      padding: 10px;
-      width: 90%;
+  form input{
+      border: 4;
       margin-right: .5%;
+    }
+    
+    
+    form button {
+        width: 9%;
+        background: rgb(130, 224, 255);
+        float: right;
+        border: none;
+        padding: 10px;
+        margin-right: .3%;
+    }
+    #messageInput {
+    padding: 10px;
+    width: 80%;
   }
-
-  form button {
-      width: 9%;
-      background: rgb(130, 224, 255);
-      border: none;
-      padding: 10px;
+  #colorPickerLabel {
+      color: white;
+      font-size: 20px;
+      margin-right: 10px;
   }
-
   #messages {
       list-style-type: none;
       margin: 0;
