--- a/pages/styles/home.css
+++ b/pages/styles/home.css
@@ -8,7 +8,7 @@
       font: 13px Helvetica, Arial;
   }
 
-  form {
+  #messageForm {
       background: #000;
       padding: 3px;
       position: fixed;
@@ -33,6 +33,11 @@
     #messageInput {
     padding: 10px;
     width: 80%;
+  }
+  #messageInputLabel{
+      color: white;
+      font-size: 15px;
+      margin-right: 10px;
   }
   #colorPickerLabel {
       color: white;
